<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gallery"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.birger.mainmenuactivity.GalleryActivity">

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="398dp"
        android:id="@+id/gridView"
        android:numColumns="5"
        tools:listitem="@android:layout/simple_list_item_1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewGallery"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_home"
        android:id="@+id/btnHome"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:onClick="toHome"
        />

</LinearLayout>
