...
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_skipStep"
            android:onClick="toHomeFirst"
            android:layout_weight="0.33" />

        <Button
            android:text="@string/btn_cam"
            android:layout_width="wrap_content"
...
